--- a/src/components/LogicFlow/src/Bpmn/index.css
+++ b/src/components/LogicFlow/src/Bpmn/index.css
@@ -3,6 +3,7 @@
   position: relative;
   overflow: hidden;
 }
+
 .pattern {
   position: absolute;
   left: 10px;
@@ -12,13 +13,14 @@
   flex-direction: column;
   z-index: 111;
   align-items: center;
-  background: rgba(255,255,255,0.8);
-  box-shadow: 0 1px 4px rgba(0,0,0,.3);
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
   padding: 10px 0;
   font-size: 12px;
   color: #676768;
   user-select: none;
 }
+
 .pattern-selection {
   width: 36px;
   height: 36px;
@@ -26,6 +28,7 @@
   cursor: pointer;
   opacity: 0.99;
 }
+
 .pattern-start {
   width: 36px;
   height: 36px;
@@ -33,6 +36,7 @@
   cursor: grab;
   opacity: 0.99;
 }
+
 .pattern-end {
   width: 36px;
   height: 36px;
@@ -40,6 +44,7 @@
   cursor: grab;
   opacity: 0.99;
 }
+
 .pattern-user {
   width: 36px;
   height: 36px;
@@ -47,6 +52,7 @@
   cursor: grab;
   opacity: 0.99;
 }
+
 .pattern-condition {
   width: 36px;
   height: 36px;
